--- a/Adults/ML - Adults.ipynb
+++ b/Adults/ML - Adults.ipynb
@@ -170,6 +170,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It´s worth to mention that the skewness must be taken into account just if it's between -0.5 and 0.5, and the kurtosis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## PREPROCESING\n",
     "\n",
     "### AGE\n",
